# lineage-mcp

./: AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  appsettings.json  config.py  file_watcher.py  instruction_files.py  lineage.py  opencode.jsonc  path_utils.py  requirements.txt  session_state.py  tray_client.py
.opencode/: command
.serena/: project.yml
docs/: character-pagination-implementation-guide.md  character-pagination-validation-report.md
hooks/: clearcache.py  pid_utils.py  precompact.py
lineage-mcp-tray/: README.md  pyproject.toml  start-tray-watchdog.ps1
lineage-mcp-tray/lineage_tray/: __init__.py  __main__.py  actions.py  app.py  icon.py  menu_builder.py  message_log.py  pipe_server.py  session_store.py
lineage-mcp-tray/tests/: test_actions.py  test_icon.py  test_menu_builder.py  test_message_log.py  test_pipe_server.py  test_session_store.py
tests/: __init__.py  conftest.py  example_responses.txt  generate_examples.py  test_clear_cache.py  test_config.py  test_delete_file.py  test_edit_file.py  test_file_watcher.py  test_instruction_files.py  test_integration.py  test_lineage.py  test_list_files.py  test_modify.py  test_multi_edit_file.py  test_multi_read_file.py  test_path_utils.py  test_pid_utils.py  test_read_file.py  test_read_file_pagination.py  test_search_files.py  test_session_state.py  test_tray_client.py  test_utils.py  test_write_file.py
tools/: __init__.py  clear_cache.py  delete_file.py  edit_file.py  list_files.py  modify.py  multi_edit_file.py  multi_read_file.py  read_file.py  search_files.py  write_file.py
(+17 files in other folders)
